; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_load_device.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_load_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }

@CLSID_MMDeviceEnumerator = common dso_local global i32 0, align 4
@CLSCTX_ALL = common dso_local global i32 0, align 4
@IID_IMMDeviceEnumerator = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Error loading selected device: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32**, i32)* @load_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_device(%struct.mp_log* %0, i32** %1, i32 %2) #0 {
  %4 = alloca %struct.mp_log*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.mp_log* %0, %struct.mp_log** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %9 = load i32, i32* @CLSCTX_ALL, align 4
  %10 = bitcast i32** %7 to i8**
  %11 = call i32 @CoCreateInstance(i32* @CLSID_MMDeviceEnumerator, i32* null, i32 %9, i32* @IID_IMMDeviceEnumerator, i8** %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @EXIT_ON_ERROR(i32 %12)
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32**, i32*** %5, align 8
  %17 = call i32 @IMMDeviceEnumerator_GetDevice(i32* %14, i32 %15, i32** %16)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @EXIT_ON_ERROR(i32 %18)
  br label %20

20:                                               ; preds = %3
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @FAILED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load %struct.mp_log*, %struct.mp_log** %4, align 8
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @mp_HRESULT_to_str(i32 %26)
  %28 = call i32 @mp_err(%struct.mp_log* %25, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %27)
  br label %29

29:                                               ; preds = %24, %20
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @SAFE_RELEASE(i32* %30)
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @SUCCEEDED(i32 %32)
  ret i32 %33
}

declare dso_local i32 @CoCreateInstance(i32*, i32*, i32, i32*, i8**) #1

declare dso_local i32 @EXIT_ON_ERROR(i32) #1

declare dso_local i32 @IMMDeviceEnumerator_GetDevice(i32*, i32, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @mp_err(%struct.mp_log*, i8*, i32) #1

declare dso_local i32 @mp_HRESULT_to_str(i32) #1

declare dso_local i32 @SAFE_RELEASE(i32*) #1

declare dso_local i32 @SUCCEEDED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
